Fix the margin, too much owl

--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -124,7 +124,7 @@ p {
     margin: 0;
 }
 
-.h-entry * + *, .e-content * + *, .h-cite * + * {
+.h-entry > * + *, .e-content > * + *, .h-cite > * + * {
     margin-top: 1rem;
 }
 
